# CC1200RateAdaptationMinstrel

./: CMakeLists.txt  README.md  SPIv1.c  SPIv1.h
simulation/: README.md  stats_sim.c  stats_sim.h
src/cc1200/: cc1200_mockup.c  cc1200_rate.c  cc1200_rate.h  register_config.c  register_config.h
src/controller/: main_receiver.c  main_sender.c  minstrel_main.c  packet.c  packet.h  packet_minstrel.c  packet_minstrel.h  receiver.c  receiver.h  sender.c  sender.h  sender_interface.c  sender_interface.h  ui_sender.c  ui_sender.h
src/log.c/src/: log.c  log.h
src/minstrel/: minstrel.c  minstrel.h  minstrel_mockup.c
testing/: CMakeLists.txt  main_test.c  test_controller_communication.c  test_controller_communication.h  test_controller_packet.c  test_controller_packet.h  testing.c
